[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Start Menu.gd" type="Script" id=1]
[ext_resource path="res://UI/MenuBG.png" type="Texture" id=2]
[ext_resource path="res://UI/Beyond Wonderland.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sound/honor-and-sword-main-11222.mp3" type="AudioStream" id=4]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 34
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 78
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 512, 294 )
scale = Vector2( 0.533, 0.533 )
texture = ExtResource( 2 )

[node name="StartButton" type="Button" parent="."]
margin_left = 185.0
margin_top = 301.0
margin_right = 835.0
margin_bottom = 341.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="HelpButton" type="Button" parent="."]
margin_left = 185.0
margin_top = 351.0
margin_right = 835.0
margin_bottom = 391.0
custom_fonts/font = SubResource( 3 )
text = "Help"

[node name="QuitButton" type="Button" parent="."]
margin_left = 185.0
margin_top = 401.0
margin_right = 835.0
margin_bottom = 441.0
custom_fonts/font = SubResource( 4 )
text = "Quit"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 301 )
current = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -270.0
margin_top = 40.0
margin_right = 230.0
margin_bottom = 140.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "    Plot Armor"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
autoplay = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
